Deployment binding your apps to host/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: your-secret #cert and key for ssl
  rules:
  - host: your.domains.com
    http:
      paths:
      - backend:
          serviceName: your-service
          servicePort: 80
